--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
+    "jest": "^23.6.0",
     "jwt-decode": "^2.2.0",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
